[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/CreditsFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Difficulty.gd" type="Script" id=2]

[node name="Difficulty" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -32.0
margin_right = 170.0
margin_bottom = 32.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 340.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Difficulty"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 340.0
margin_bottom = 64.0
custom_constants/separation = 20

[node name="Easy" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Easy"

[node name="Medium" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 232.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Medium"

[node name="Hard" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 340.0
margin_bottom = 30.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Hard"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Hard" to="." method="_on_Hard_pressed"]
